@@ -32,6 +32,8 @@
 									<li>AT_PP_S</li>
 									<li>AT_Power</li>
 									<li>AT_Power_A</li>
+									<li>AT_Power_A_B</li>
+									<li>AT_Power_A_C</li>
 									<li>AT_Power_B</li>
 								</pawnKinds>
 							</li>
@@ -47,6 +49,8 @@
 									<li>AT_PP_S</li>
 									<li>AT_Power</li>
 									<li>AT_Power_A</li>
+									<li>AT_Power_A_B</li>
+									<li>AT_Power_A_C</li>
 									<li>AT_Power_B</li>
 								</pawnKinds>
 							</li>
@@ -66,6 +70,8 @@
 									<li>AT_Launcher_A</li>
 									<li>AT_Power</li>
 									<li>AT_Power_A</li>
+									<li>AT_Power_A_B</li>
+									<li>AT_Power_A_C</li>
 									<li>AT_Power_B</li>
 								</pawnKinds>
 							</li>
@@ -79,6 +85,8 @@
 									<li>AT_Launcher_A</li>
 									<li>AT_Power</li>
 									<li>AT_Power_A</li>
+									<li>AT_Power_A_B</li>
+									<li>AT_Power_A_C</li>
 									<li>AT_Power_B</li>
 								</pawnKinds>
 							</li> 
