@@ -13,9 +13,12 @@
   <AT_Rifle_B.label>앤티 원거리 보병</AT_Rifle_B.label>
   <AT_Charge_B.label>앤티 근거리 보병</AT_Charge_B.label>
   <AT_Launcher_A.label>앤티 유탄사수</AT_Launcher_A.label>
+  <AT_Launcher_B.label>앤티 유탄사수</AT_Launcher_B.label>
   <AT_SingleUse.label>앤티 화력보병</AT_SingleUse.label>
   <AT_Power.label>앤티 원거리 강화보병</AT_Power.label>
   <AT_Power_A.label>앤티 원거리 강화보병</AT_Power_A.label>
+  <AT_Power_A_B.label>앤티 원거리 강화보병</AT_Power_A_B.label>
+  <AT_Power_A_C.label>앤티 원거리 강화보병</AT_Power_A_C.label>
   <AT_Power_B.label>앤티 근거리 강화보병</AT_Power_B.label>
   <AT_Power_C.label>앤티 강화 유탄사수</AT_Power_C.label>
   <AT_Power_D.label>앤티 근거리 강화보병</AT_Power_D.label>
