@@ -133,3 +133,8 @@ ThingDef
   Bullethydroheliumion_D .label
   Filth_ApproachSmoke_A .label
 
+PawnKindDef
+  AT_Launcher_B .label
+  AT_Power_A_B  .label
+  AT_Power_A_C  .label
+
